2007-04-22  Robert Ancell  <robert.ancell@gmail.com>

	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
	* If an AI dies the game completes and the UI displays "opponent has died". This is
	  an actual tag in the PGN spec I was looking for a reason to use!!

2007-04-09  Robert Ancell  <robert.ancell@gmail.com>

	* Merged changes from sf.net version 1.0.5:
	  - Added timed play.
	  - Changed nice level for AIs to 19 (they are affecting the animation)
	  - Add choice of board rotation modes (white side, black side, human
	    side, current players side)
	  - Fixed broken OpenGL board rotation
	  - Added 2D rotation

2007-03-20  Andreas Røsdal  <andreasr@gnome.org>

	* glchess.desktop.in: Remove extra space at end of tooltip.
	Patch from Bruce Cowan in bug #410784. 

2007-03-18  Robert Ancell  <robert.ancell@gmail.com>
	* Handle empty filename in save dialog (Gnome bug #419486)
        * gtkui/chessview.py: Change python OpenGL import to make issues with external bindings more visible (Gnome bug #419605)

2007-03-16  Robert Ancell  <robert.ancell@gmail.com>

	* Merged changes from glChess 1.0.4:
	 o Added menu selectable promotion type
	 o AI players now wait for piece animation to end before making moves
	 o Refactored game/scene code
	 o Made move hints optional. (menu item: view->move hints)
	 o Added support for Boo's Chess Engine.
	 o Changed chess engine to using bitboards (33% faster)
	 o Added detection for stalemate, resignation, threefold repetition,
	   fifty move rule. (Still insufficient material to be done).
	 o Tooltip style panel appears when game ends.
	 o Removed all pop-up error dialogs and integrated the error reporting
	   into the load/save dialogs.

2007-02-01  Robert Ancell  <robert.ancell@gmail.com>

	* main.py: Fixed printf error when AI cannot be found (Bug #402751)
	* src/glchess.in: Fix startup crasher if cannot contact bugbuddy due to rogue 'none' command (Bug #403077)
