@@ -3,6 +3,7 @@
 	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
 	* If an AI dies the game completes and the UI displays "opponent has died". This is
 	  an actual tag in the PGN spec I was looking for a reason to use!!
+	* Catch exception if unable to display help (Bug #432216)
 
 2007-04-09  Robert Ancell  <robert.ancell@gmail.com>
 
